p2/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "app1.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: appone
            port:
              number: 80
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-ingress
#   annotations:
#     kubernetes.io/ingress.class: "traefik"
# spec:
#   rules:
#   - host: "app1.com"
#     http:
#       paths:
#       - pathType: Prefix
#         path: /
#         backend:
#           service:
#             name: appone
#             port:
#               number: 80
